--- a/package.json
+++ b/package.json
@@ -4,25 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently -k \"node dispatcher.js\" \"node sink.js\""
+    "lint": "eslint src src/index.js",
+    "precommit": "npm run lint",
+    "test": "nyc mocha --reporter progress \"src/*.test.js\"",
+    "cover": "npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
+    "coveralls": "^3.0.0",
     "eslint": "^4.13.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^5.0.0"
+    "husky": "^0.14.3",
+    "mocha": "^5.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^11.4.1",
+    "sinon": "^4.2.2"
   },
   "dependencies": {
     "chalk": "^2.3.0",
-    "config": "^1.28.1",
-    "dotenv": "^4.0.0",
     "faker": "^4.1.0",
     "sb-schema": "github:meel-io/sb-schema",
     "zmq": "^2.15.3"
