--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mocha": "^5.0.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^11.4.1",
-    "sinon": "^4.2.2"
+    "sinon": "^4.2.2",
+    "streamtest": "^1.2.3"
   },
   "dependencies": {
     "chalk": "^2.3.0",
