--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^9.4.6",
+    "@types/zmq": "0.0.22",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "coveralls": "^3.0.0",
