--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "build": "tsc",
     "lint": "eslint src src/index.js",
     "precommit": "npm run lint",
-    "test": "nyc mocha --reporter progress \"lib/*.test.js\"",
+    "test": "nyc mocha --reporter progress --require ts-node/register \"src/*.test.ts\"",
     "cover": "npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.6",
+    "@types/sinon": "^4.1.3",
     "@types/zmq": "0.0.22",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
@@ -32,6 +34,7 @@
     "nyc": "^11.4.1",
     "sinon": "^4.2.2",
     "streamtest": "^1.2.3",
+    "ts-node": "^5.0.0",
     "typescript": "^2.7.2"
   },
   "dependencies": {
