--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.6",
+    "@types/pino": "^4.7.1",
     "@types/sinon": "^4.1.3",
     "@types/zmq": "0.0.22",
     "chai": "^4.1.2",
@@ -33,7 +34,6 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^11.4.1",
     "sinon": "^4.2.2",
-    "streamtest": "^1.2.3",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.8.0",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
-    "faker": "^4.1.0",
+    "pino": "^4.11.0",
     "sb-schema": "github:meel-io/sb-schema",
     "zmq": "^2.15.3"
   }
