--- a/package.json
+++ b/package.json
@@ -45,11 +45,7 @@
     "@types/node": "^9.6.7",
     "@types/pino": "^4.7.1",
     "@types/sinon": "^4.3.1",
-    "@types/zmq": "0.0.22",
     "amqplib": "^0.5.2",
-    "chalk": "^2.4.1",
-    "pino": "^4.16.1",
-    "sb-schema": "github:meel-io/sb-schema",
-    "zmq": "^2.15.3"
+    "pino": "^4.16.1"
   }
 }
