--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc --declaration",
     "lint": "tslint -p tsconfig.json -e src/*.test.ts",
     "precommit": "npm run lint",
-    "test": "npm run build && nyc mocha --reporter progress \"lib/*.test.js\"",
+    "test":
+      "nyc mocha --reporter progress --require ts-node/register 'src/*.test.ts'",
     "cover": "npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "meel-io",
@@ -19,6 +20,8 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^2.2.48",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "coveralls": "^3.0.0",
@@ -41,7 +44,6 @@
   },
   "dependencies": {
     "@types/amqplib": "^0.5.7",
-    "@types/mocha": "^2.2.48",
     "@types/node": "^9.6.7",
     "@types/pino": "^4.7.1",
     "@types/sinon": "^4.3.1",
