--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: node_js
 node_js:
   - "8.5.0"
-before_install:
-  - echo "deb http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/Debian_9.0/ ./" | sudo tee -a /etc/apt/sources.list
-  - wget https://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-stable/Debian_9.0/Release.key -O- | sudo apt-key add
-  - sudo apt-get install -y libzmq3-dev
-before_script:
-  - npm install
+
+services:
+  - docker
+
+install:
+  - docker build -t largitor .
+  - docker run -d -it --name largitor largitor
+
 script:
-  - npm run lint
-  - npm test
+  - docker exec largitor npm run lint
+  - docker exec largitor npm test
