--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "lint": "tslint -p tsconfig.json -e src/*.test.ts",
     "precommit": "npm run lint",
     "test":
-      "nyc mocha --reporter progress --require ts-node/register 'src/*.test.ts'",
-    "cover": "npm test && nyc report --reporter=text-lcov | coveralls"
+      "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
+    "cover": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+  },
+  "nyc": {
+    "include": ["src/*.ts"],
+    "exclude": ["src/*.test.ts"],
+    "extension": [".ts"],
+    "require": ["ts-node/register"],
+    "sourceMap": true,
+    "instrument": true
   },
   "author": "meel-io",
   "repository": {
@@ -24,30 +32,30 @@
     "@types/mocha": "^2.2.48",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
-    "coveralls": "^3.0.0",
+    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "husky": "^0.14.3",
-    "mocha": "^5.1.1",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^11.7.1",
+    "nyc": "^11.8.0",
     "sinon": "^4.5.0",
     "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.12.0",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.3"
   },
   "dependencies": {
     "@types/amqplib": "^0.5.7",
-    "@types/node": "^9.6.7",
-    "@types/pino": "^4.7.1",
-    "@types/sinon": "^4.3.1",
+    "@types/node": "^9.6.18",
+    "@types/pino": "^4.16.0",
+    "@types/sinon": "^4.3.3",
     "amqplib": "^0.5.2",
-    "pino": "^4.16.1"
+    "pino": "^4.17.0"
   }
 }
