--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "build": "tsc --declaration",
     "lint": "tslint -p tsconfig.json -e src/*.test.ts",
     "precommit": "npm run lint",
-    "test":
-      "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
+    "test": "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
     "cover": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
-    "include": ["src/*.ts"],
-    "exclude": ["src/*.test.ts"],
-    "extension": [".ts"],
-    "require": ["ts-node/register"],
+    "include": [
+      "src/*.ts"
+    ],
+    "exclude": [
+      "src/*.test.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
     "sourceMap": true,
     "instrument": true
   },
@@ -42,20 +49,20 @@
     "husky": "^0.14.3",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^11.8.0",
+    "nyc": "^11.9.0",
     "sinon": "^4.5.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.1"
   },
   "dependencies": {
     "@types/amqplib": "^0.5.7",
-    "@types/node": "^9.6.18",
+    "@types/node": "^9.6.20",
     "@types/pino": "^4.16.0",
     "@types/sinon": "^4.3.3",
     "amqplib": "^0.5.2",
-    "pino": "^4.17.0"
+    "pino": "^4.17.2"
   }
 }
