--- a/package.json
+++ b/package.json
@@ -7,24 +7,17 @@
   "scripts": {
     "install": "npm run build",
     "build": "tsc --declaration",
-    "lint": "tslint -p tsconfig.json -e src/*.test.ts",
+    "lint": "tslint -p tsconfig.json",
     "precommit": "npm run lint",
-    "test": "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
+    "test":
+      "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
     "cover": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
-    "include": [
-      "src/*.ts"
-    ],
-    "exclude": [
-      "src/*.test.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
+    "include": ["src/*.ts"],
+    "exclude": ["src/*.test.ts"],
+    "extension": [".ts"],
+    "require": ["ts-node/register"],
     "sourceMap": true,
     "instrument": true
   },
