--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.js",
   "scripts": {
     "install": "npm run build",
-    "build": "tsc --declaration",
+    "build": "tsc",
     "lint": "tslint -p tsconfig.json",
     "precommit": "npm run lint",
     "test":
