--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "build": "tsc",
     "lint": "tslint -p tsconfig.json",
     "precommit": "npm run lint",
-    "test":
-      "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
+    "test": "mocha --reporter=progress --require ts-node/register --require source-map-support/register --full-trace --bail 'src/*.test.ts'",
     "cover": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "nyc": {
-    "include": ["src/*.ts"],
-    "exclude": ["src/*.test.ts"],
-    "extension": [".ts"],
-    "require": ["ts-node/register"],
+    "include": [
+      "src/*.ts"
+    ],
+    "exclude": [
+      "src/*.test.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
     "sourceMap": true,
     "instrument": true
   },
@@ -30,6 +37,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/mocha": "^2.2.48",
+    "@types/sinon": "^4.3.3",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "coveralls": "^3.0.1",
@@ -54,7 +62,6 @@
     "@types/amqplib": "^0.5.7",
     "@types/node": "^9.6.20",
     "@types/pino": "^4.16.0",
-    "@types/sinon": "^4.3.3",
     "amqplib": "^0.5.2",
     "pino": "^4.17.2"
   }
