--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^2.2.48",
     "@types/sinon": "^4.3.3",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "concurrently": "^3.5.1",
     "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
