--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@types/amqplib": "^0.5.7",
     "@types/node": "^9.6.20",
     "@types/pino": "^4.16.0",
-    "amqplib": "^0.5.2",
-    "pino": "^4.17.2"
+    "amqplib": "^0.5.2"
   }
 }
