--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,7 @@
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "suppressImplicitAnyIndexErrors": false,
-    "noResolve": false,
-    "noUnusedParameters": false,
+    "noUnusedParameters": true,
     "outDir": "./lib"
   },
   "include": ["src/*.ts"],
