--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/mocha": "^2.2.48",
+    "@types/pino": "^5.6.1",
     "@types/sinon": "^4.3.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -62,6 +63,7 @@
   "dependencies": {
     "@types/amqplib": "^0.5.7",
     "@types/node": "^9.6.22",
-    "amqplib": "^0.5.2"
+    "amqplib": "^0.5.2",
+    "pino": "^5.8.0"
   }
 }
